force-app/main/default/objects/Matricula__c/Matricula__c.object-meta.xml
<CustomObject>
    <label>Matricula</label>
    <nameField>
        <displayFormat>MAT-{00000}</displayFormat>
        <label>Matricula</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matriculas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>