force-app/main/default/objects/Matricula__c/fields/Matricula_provincial__c.field-meta.xml
<CustomField>
    <fullName>Matricula_provincial__c</fullName>
    <label>Matricula provincial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>CABA</fullName>
            </value>
            <value>
                <fullName>Catamarca</fullName>
            </value>
            <value>
                <fullName>Chaco</fullName>
            </value>
            <value>
                <fullName>Chubut</fullName>
            </value>
            <value>
                <fullName>Córdoba</fullName>
            </value>
            <value>
                <fullName>Corrientes</fullName>
            </value>
            <value>
                <fullName>Entre Ríos</fullName>
            </value>
            <value>
                <fullName>Formosa</fullName>
            </value>
            <value>
                <fullName>Jujuy</fullName>
            </value>
            <value>
                <fullName>La Pampa</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Misiones</fullName>
            </value>
            <value>
                <fullName>Neuquén</fullName>
            </value>
            <value>
                <fullName>Río Negro</fullName>
            </value>
            <value>
                <fullName>Salta</fullName>
            </value>
            <value>
                <fullName>San Juan</fullName>
            </value>
            <value>
                <fullName>San Luis</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Santa Fe</fullName>
            </value>
            <value>
                <fullName>Santiago del Estero</fullName>
            </value>
            <value>
                <fullName>Tierra del Fuego</fullName>
            </value>
            <value>
                <fullName>Tucumán</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
                <isActive>false</isActive>
                <label>Ninguna</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>