force-app/main/default/objects/Matricula__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Tipo__c</columns>
    <columns>Numero_de_matricula__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>